--- a/client/src/assets/Create_post.css
+++ b/client/src/assets/Create_post.css
@@ -123,7 +123,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .forms {
-    /*margin: 0 auto;*/
+    margin: 0 auto;
     box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1), inset 0px 0px 0px 1px rgba(209, 213, 219, 1);
     border-radius: 20px;
     position: absolute;
