--- a/client/src/assets/edit_post.css
+++ b/client/src/assets/edit_post.css
@@ -127,9 +127,10 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     text-align: center;
     border-radius: 20px;
-    top: 70%;
+    margin-top: 30px;
+    /*top: 70%;*/
     left: 50%;
-    transform: translate(-50%, -70%);
+    transform: translate(-50%);
     box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1), inset 0px 0px 0px 1px rgba(209, 213, 219, 1);
 
 }
